# server/src/controllers/storage.js
@@ -1,12 +1,14 @@
-const createSignedUploadURL = require("../utils/createSignedUploadUrl");
+const createSignedUploadURL = require("../utils/createSignedUploadURL");
 const createSignedURL = require("../utils/createSignedURL");
-//controllers/storage.js
+
 async function uploadURL(req, res, next) {
   const path = req.user.businessId + ".jpg";
   try {
     const { data, error } = await createSignedUploadURL(path);
     if (error)
-      return res.status(500).json({ message: "Image could not be uploaded" });
+      return res.status(500).json({
+        message: `could not generate signed upload URL ${error.message}`,
+      });
 
     res.status(200).json({ URL: data.signedUrl, token: data.token });
   } catch (ex) {
@@ -19,7 +21,9 @@ async function accessURL(req, res, next) {
   try {
     const { data, error } = await createSignedURL(path);
     if (error)
-      return res.status(500).json({ message: "could not generate signed URL" });
+      return res
+        .status(500)
+        .json({ message: `could not generate signed URL ${error.message}` });
 
     res.status(200).json({ URL: data.signedUrl });
   } catch (ex) {
